syntax = "proto3";

package proto;

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string greetings = 1;
}

service Greeter {
    rpc SayHello(HelloRequest) returns (HelloResponse) {}
}